--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,4 @@ requests-toolbelt==0.9.1; python_version >= "3.6"
 requests==2.26.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 sqlparse==0.4.2; python_version >= "3.6"
 urllib3==1.26.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
+whitenoise==5.3.0; python_version >= "3.5" and python_version < "4"
